GBL-2260 / TSK-1481 - атрибутивный поиск по enter

--- a/modules/ROOT/pages/schemas/Release/BackOffice/CardTask.adoc
+++ b/modules/ROOT/pages/schemas/Release/BackOffice/CardTask.adoc
@@ -404,14 +404,14 @@
 
 *Подчиненные секции*
 
-*Секция "Дополнительные аттрибуты"*
+*Секция "Дополнительные атрибуты"*
 
 * Идентификатор: 94A7469D-0631-49BA-BE0A-B4099D6EA4C2
 * Псевдоним: AdditionalFields
-* Название: Дополнительные аттрибуты
+* Название: Дополнительные атрибуты
 * Тип секции: coll
 
-.[.table--title-label]##Табл. 21. ##[.title]##Поля секции "Дополнительные аттрибуты"##
+.[.table--title-label]##Табл. 21. ##[.title]##Поля секции "Дополнительные атрибуты"##
 [width="100%",cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
