--- a/modules/ROOT/pages/CreateSolution.adoc
+++ b/modules/ROOT/pages/CreateSolution.adoc
@@ -2,7 +2,7 @@
 
 В данном практическом примере содержится типовой сценарий разработки _решения_.
 
-Архив с исходным кодом _решения_ доступен по xref:example$/netstatSolution.zip[ссылке].
+Архив с исходным кодом _решения_ доступен по xref:example$netstatSolution.zip[ссылке].
 
 Для работы с проектом Решения необходимы:
 
