--- a/modules/ROOT/pages/samples_container_createcomponents_propertypages.adoc
+++ b/modules/ROOT/pages/samples_container_createcomponents_propertypages.adoc
@@ -6,7 +6,7 @@
 
 [NOTE]
 ====
-[.note__title]#Прим.:# Архив с исходным кодом _решения_ доступен по xref:example$/winclientExtension.zip[ссылке].
+[.note__title]#Прим.:# Архив с исходным кодом _решения_ доступен по xref:example$winclientExtension.zip[ссылке].
 ====
 
 . Создаем (в Visual Studio) новый проект типа Class Library.
