--- a/modules/ROOT/pages/samples_container_createcomponents_refstaffcontrol.adoc
+++ b/modules/ROOT/pages/samples_container_createcomponents_refstaffcontrol.adoc
@@ -35,7 +35,7 @@
 
 [NOTE]
 ====
-[.note__title]#Прим.:# Полный код проекта доступен по xref:example$/controlForStaff2.zip[ссылке].
+[.note__title]#Прим.:# Полный код проекта доступен по xref:example$controlForStaff2.zip[ссылке].
 ====
 
 Компоненты, описание реализации которых приведено далее, собраны в проекте *SampleStaffControl* (типа Class Library).
