--- a/modules/ROOT/pages/SC_CommandPlugin.adoc
+++ b/modules/ROOT/pages/SC_CommandPlugin.adoc
@@ -117,5 +117,5 @@ namespace DocsVision.Test.NavPluging
 
 [NOTE]
 ====
-[.note__title]#Прим.:# Полностью проект, содержащий командное расширение и библиотеку карточек, доступен по xref:example$/winclientPlugin.zip[ссылке].
+[.note__title]#Прим.:# Полностью проект, содержащий командное расширение и библиотеку карточек, доступен по xref:example$winclientPlugin.zip[ссылке].
 ====
