--- a/modules/ROOT/pages/ConnectorToStorageSample.adoc
+++ b/modules/ROOT/pages/ConnectorToStorageSample.adoc
@@ -8,7 +8,7 @@
 
 Для работы с Google Drive в данном примере используется предоставляемая реализация обертки для работы с Google Drive API в .NET (NuGet пакет https://www.nuget.org/packages/Google.Apis.Drive.v3/).
 
-Исходный код примера доступен по xref:attachments$gDriveStorage.zip[ссылке].
+Исходный код примера доступен по xref:attachment$gDriveStorage.zip[ссылке].
 
 Пример содержит два проекта:
 
@@ -33,7 +33,7 @@
 
 == Последовательность работы с примером
 
-. Распакуйте xref:attachments$gDriveStorage.zip[архив] примера на локальный диск.
+. Распакуйте xref:attachment$gDriveStorage.zip[архив] примера на локальный диск.
 . Получите файл с конфигурацией клиента (`credentials.json`) на странице https://developers.google.com/drivexref:api/v3/quickstart/dotnet (шаг 1). Потребуется авторизоваться в Google.
 . Загрузите файл `credentials.json` в папку `GoogleDriveStorageProvider\AskToken\bin\Debug\` распакованного архива примера.
 . Включите в Visual Studio настройку https://docs.microsoft.com/ru-ru/nuget/consume-packages/package-restore-troubleshooting[Allow Nuget to download missing package] для автоматической загрузки необходимых пакетов библиотеки Google Drive API.
