--- a/modules/ROOT/pages/StorageRule.adoc
+++ b/modules/ROOT/pages/StorageRule.adoc
@@ -18,7 +18,7 @@
 [[StorageRule__section_lrl_wmt_wlb]]
 == Пример
 
-Далее демонстрируется пример реализации правила помещения в хранилища в зависимости от установленного в настройках шаблона файлов. Исходный код примера доступен по xref:attachments$ruleByFileName.zip[ссылке].
+Далее демонстрируется пример реализации правила помещения в хранилища в зависимости от установленного в настройках шаблона файлов. Исходный код примера доступен по xref:attachment$ruleByFileName.zip[ссылке].
 
 . Основной класс.
 +
