--- a/modules/ROOT/pages/SC_CreateHistLibBO.adoc
+++ b/modules/ROOT/pages/SC_CreateHistLibBO.adoc
@@ -4,7 +4,7 @@
 
 [NOTE]
 ====
-[.note__title]#Прим.:# Архив готовой библиотеки карточек, приведенной в данном примере, доступен по xref:attachments$cardLibrary.zip[ссылке].
+[.note__title]#Прим.:# Архив готовой библиотеки карточек, приведенной в данном примере, доступен по xref:attachment$cardLibrary.zip[ссылке].
 ====
 
 == Разработка схемы данных
