Битые ссылки на изображения

--- a/modules/ROOT/pages/develop/cards/scheme/actions.adoc
+++ b/modules/ROOT/pages/develop/cards/scheme/actions.adoc
@@ -7,7 +7,7 @@
 Для добавления действий следует перейти в раздел _Actions_ и выбрать пункт меню _New action_.
 
 .Описание действий над карточкой
-image::card-actions-descriptionpng[Описание действий над карточкой]
+image::card-actions-description.png[Описание действий над карточкой]
 
 .Свойства действия (метода) включают в себя:
 * _Псевдоним_ -- псевдоним действия, с помощью которого к нему можно обращаться в коде. Псевдоним должен быть уникальным в рамках карточки.
