--- a/modules/ROOT/pages/develop/cards/scheme/load-scheme.adoc
+++ b/modules/ROOT/pages/develop/cards/scheme/load-scheme.adoc
@@ -10,7 +10,7 @@ _CardManager_ предоставляет возможность погрузит
 ====
 
 .Выгрузка схемы карточки в базу данных {dv}
-image::load-scheme-to-dbpng[Выгрузка схемы карточки в базу данных {dv}]
+image::load-scheme-to-db.png[Выгрузка схемы карточки в базу данных {dv}]
 
 Если описание карточки уже присутствует в указанной базе данных, существующие структуры данных будут автоматически обновлены согласно внесённым в схему изменениям.
 
@@ -20,6 +20,6 @@ image::load-scheme-to-dbpng[Выгрузка схемы карточки в ба
 ====
 При изменении схемы карточки, чтобы получить возможность использовать модифицированную схему на клиенте, нужно обязательно выполнить следующие действия:
 
-* xref:develop/cards/CardsDevCompLibary.adoc[Повторно скомпилировать] _компонент библиотеки карточек_. Комплект библиотеки карточек кэширует схемы всех карточек библиотеки, что позволяет ускорить доступ к ним. Без повторной компиляции будет возвращаться старое описание.
+* xref:develop/cards/card-component/CardsDevCompLibary.adoc[Повторно скомпилировать] _компонент библиотеки карточек_. Комплект библиотеки карточек кэширует схемы всех карточек библиотеки, что позволяет ускорить доступ к ним. Без повторной компиляции будет возвращаться старое описание.
 * Перезапустить сервер {dv} (NT-сервис {sss} и/или IIS) -- запущенный сервер также кэширует схемы всех карточек. Без перезапуска будет возвращаться старое описание.
 ====
