--- a/modules/ROOT/pages/develop/cards/scheme/sections-fields.adoc
+++ b/modules/ROOT/pages/develop/cards/scheme/sections-fields.adoc
@@ -3,7 +3,7 @@
 Создание секции также включает в себя добавление полей и дочерних секций. Для этого следует выбрать нужную секцию и воспользоваться командой _New field_ или _New section_. Дочерние секции содержат те же свойства, что и секции первого уровня.
 
 .Редактирование поля секции]
-image::edit-section-fieldpng[Редактирование поля секции]
+image::edit-section-field.png[Редактирование поля секции]
 
 .Описание поля содержит следующие свойства:
 * _Псевдоним_ -- псевдоним поля, с помощью которого к нему можно обращаться в коде. Псевдоним должен быть уникальным в рамках секции.
