--- a/modules/ROOT/pages/develop/cards/scheme/virtual-fields.adoc
+++ b/modules/ROOT/pages/develop/cards/scheme/virtual-fields.adoc
@@ -45,7 +45,7 @@ image::virtual-field-properties.png[Свойства виртуального п
 * _Присоединенные разделы_ -- позволяет определить связи основной секции виртуального поля с другими секциями или таблицами. Секции связываются между собой по определённому полю (обычно -- уникальному идентификатору).
 
 .Присоединение секции
-image::append-section[Присоединение секции]
+image::append-section.png[Присоединение секции]
 
 .При присоединении секции, необходимо указать следующие значения:
 * _Alias_ -- уникальный (в рамках определения виртуального поля) псевдоним присоединяемой секции.
