--- a/modules/ROOT/pages/event-logs.adoc
+++ b/modules/ROOT/pages/event-logs.adoc
@@ -79,7 +79,7 @@
 Разработчики карточек могут расширять набор журналируемых операций, для этого в редакторе библиотеки `CardManager` на вкладке _Log_ необходимо определить новые операции, указать их идентификатор, псевдоним и имя:
 
 .Определение операций журнала
-image::log-operations[Определение операций журнала]
+image::log-operations.png[Определение операций журнала]
 
 Дополнительные атрибуты операций (`Columns`) определяются там же. Необходимо указать их псевдоним, тип данных и имя. Колонку можно ассоциировать с какой-либо операций или указать, что она обязательна для всех операций данной библиотеки.
 
