Закончил разработку решений, дальше разработка скриптов

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -40,40 +40,40 @@
 ** xref:download-mode.adoc[]
 ** xref:delayed-changes.adoc[]
 ** xref:event-logs.adoc[]
-** xref:develop/cards/develop-solution.adoc[]
-*** xref:develop/cards/scheme/dev-cards-and-lib.adoc[]
-**** xref:develop/cards/scheme/dev-data-scheme.adoc[]
-***** xref:develop/cards/scheme/connect-db.adoc[]
-***** xref:develop/cards/preapare-card-lib.adoc[]
-***** xref:develop/cards/scheme/create-edit-scheme.adoc[]
-****** xref:develop/cards/scheme/card-description.adoc[]
-****** xref:develop/cards/scheme/sections-description.adoc[]
-****** xref:develop/cards/scheme/sections-fields.adoc[]
-****** xref:develop/cards/scheme/actions.adoc[]
-****** xref:develop/cards/scheme/modes.adoc[]
-****** xref:develop/cards/scheme/transformations.adoc[]
-****** xref:develop/cards/scheme/virtual-fields.adoc[]
-***** xref:develop/cards/scheme/load-scheme.adoc[]
-**** xref:develop/cards/object-model/create-object-model.adoc[]
-***** xref:develop/cards/object-model/card-section-lines.adoc[]
-***** xref:develop/cards/object-model/card.adoc[]
-***** xref:develop/cards/object-model/mapper.adoc[]
-**** xref:develop/cards/CardsDevComp.adoc[]
-***** xref:develop/cards/CardsDevCompInterface.adoc[]
-****** xref:develop/cards/CardsDevCompEvent.adoc[]
-******* xref:develop/cards/CardsDevComp_Thread.adoc[]
-****** xref:develop/cards/CardsDevComp_Reuse.adoc[]
-***** xref:develop/cards/CardsDevCompControls.adoc[]
-**** xref:develop/cards/CardsDevCompLibary.adoc[]
-*** xref:develop/dm_extension.adoc[]
-**** xref:develop/dm_extension_navigator.adoc[]
-**** xref:develop/DM_ServerPlugins.adoc[]
-**** xref:develop/DM_ConsolePlugin.adoc[]
-*** xref:develop/dm_cretatesolution_createcontrol.adoc[]
-*** xref:develop/dm_distribution.adoc[]
-**** xref:develop/DM_DistributionServer.adoc[]
-**** xref:develop/DM_DistributionClient.adoc[]
-*** xref:develop/dm_testing.adoc[]
+** xref:solutions/cards/develop-solution.adoc[]
+*** xref:solutions/cards/scheme/dev-cards-and-lib.adoc[]
+**** xref:solutions/cards/scheme/dev-data-scheme.adoc[]
+***** xref:solutions/cards/scheme/connect-db.adoc[]
+***** xref:solutions/cards/preapare-card-lib.adoc[]
+***** xref:solutions/cards/scheme/create-edit-scheme.adoc[]
+****** xref:solutions/cards/scheme/card-description.adoc[]
+****** xref:solutions/cards/scheme/sections-description.adoc[]
+****** xref:solutions/cards/scheme/sections-fields.adoc[]
+****** xref:solutions/cards/scheme/actions.adoc[]
+****** xref:solutions/cards/scheme/modes.adoc[]
+****** xref:solutions/cards/scheme/transformations.adoc[]
+****** xref:solutions/cards/scheme/virtual-fields.adoc[]
+***** xref:solutions/cards/scheme/load-scheme.adoc[]
+**** xref:solutions/cards/object-model/create-object-model.adoc[]
+***** xref:solutions/cards/object-model/card-section-lines.adoc[]
+***** xref:solutions/cards/object-model/card.adoc[]
+***** xref:solutions/cards/object-model/mapper.adoc[]
+**** xref:solutions/cards/card-component/component.adoc[]
+***** xref:solutions/cards/card-component/standard-interfaces.adoc[]
+****** xref:solutions/cards/card-component/events.adoc[]
+******* xref:solutions/cards/card-component/thread.adoc[]
+****** xref:solutions/cards/card-component/reuse.adoc[]
+***** xref:solutions/cards/card-component/controls.adoc[]
+**** xref:solutions/cards/card-component/library.adoc[]
+*** xref:solutions/extensions/extensions.adoc[]
+**** xref:solutions/extensions/winclient.adoc[]
+**** xref:solutions/extensions/server-plugins.adoc[]
+**** xref:solutions/extensions/console-plugin.adoc[]
+*** xref:solutions/control.adoc[]
+*** xref:solutions/distribution.adoc[]
+**** xref:solutions/distribution-server.adoc[]
+**** xref:solutions/distribution-client.adoc[]
+*** xref:solutions/testing.adoc[]
 ** xref:dm_scripts.adoc[]
 *** xref:dm_scripts_getcontrol.adoc[]
 *** xref:dm_cardhost.adoc[]
