--- a/modules/ROOT/pages/CardsDevCompControlsDVBoundChooseBox.adoc
+++ b/modules/ROOT/pages/CardsDevCompControlsDVBoundChooseBox.adoc
@@ -47,7 +47,7 @@ image::dev_card_4.png[Алгоритм связывания данных]
 
 [NOTE]
 ====
-В случае использования меню команд выбора CommandMenuStrip, стандартный значок кнопки выбора "…" будет заменен на иконку первого из пунктов контекстного меню.
+В случае использования меню команд выбора CommandMenuStrip, стандартный значок кнопки выбора "…" будет заменён на иконку первого из пунктов контекстного меню.
 ====
 
 Другие свойства элемента управления BoundChooseBox:
