--- a/modules/ROOT/pages/CreateInstaller_Server.adoc
+++ b/modules/ROOT/pages/CreateInstaller_Server.adoc
@@ -13,7 +13,7 @@
 . Выгрузить в созданный подкаталог компонент _SnapIn_ и пакет установки клиентской части _решения_.
 . Создать в каталоге _решения_ подкаталог `CardPackage` и выгрузить в него xref:CreatePackages.adoc[CardPackage], а также связанные с ним XML-файлы.
 . Создать в каталоге _решения_ подкаталог `Database` и выгрузить в него xref:CreatePackages.adoc[SqlPackage], а также схемы карточек и библиотека карточек, а также их ресурсы.
-. В ветке реестра `HKEY_LOCAL_MACHINE\SOFTWARE\DocsVision\Platform\5.5\Console\SnapIns` создать раздел с названием решения.
+. В ветке реестра `{hklm}\SOFTWARE\DocsVision\Platform\5.5\Console\SnapIns` создать раздел с названием решения.
 . В созданный раздел добавить два строковых параметра:
 * Path -- путь к сборке SnapIn.
 * TypeName -- название класса SnapIn, который реализует интерфейс ISnapIn#.
