--- a/modules/ROOT/pages/DM_StandartCards_5.5.adoc
+++ b/modules/ROOT/pages/DM_StandartCards_5.5.adoc
@@ -3,7 +3,7 @@
 [width="100%",cols="25%,75%",options="header"]
 |===
 |Библиотека |Карточки
-|Базовые объекты |xref:schemas/Release/BackOffice/CardCalendar.adoc[Бизнес-календарь]
+|{bo} |xref:schemas/Release/BackOffice/CardCalendar.adoc[Бизнес-календарь]
 | |xref:schemas/Release/BackOffice/CardTaskGroup.adoc[Группа заданий]
 | |xref:schemas/Release/BackOffice/CardDocument.adoc[Документ]
 | |xref:schemas/Release/BackOffice/CardTask.adoc[Задание]
