--- a/modules/ROOT/pages/api/DocsVision/DocsVision_NS.adoc
+++ b/modules/ROOT/pages/api/DocsVision/DocsVision_NS.adoc
@@ -8,7 +8,7 @@
 |===
 |Пространство имен |Описание
 |xref:api/DocsVision/ApprovalDesigner/ApprovalDesigner_NS.adoc[DocsVision.ApprovalDesigner] |Пространство имен DocsVision.ApprovalDesigner содержит типы и методы приложения _Конструктор согласований_.
-|xref:api/DocsVision/BackOffice/BackOffice_NS.adoc[DocsVision.BackOffice] |Пространство имен DocsVision.BackOffice содержит типы представляющие объектную модель библиотеки Базовые объекты.
+|xref:api/DocsVision/BackOffice/BackOffice_NS.adoc[DocsVision.BackOffice] |Пространство имен DocsVision.BackOffice содержит типы представляющие объектную модель библиотеки {bo}.
 |xref:api/DocsVision/DocumentsManagement/DocumentsManagement_NS.adoc[DocsVision.DocumentsManagement] |Пространство имен DocsVision.DocumentsManagement содержит описание сервиса для отправки согласования.
 |xref:api/DocsVision/Platform/Platform_NS.adoc[DocsVision.Platform] |В пространстве имен DocsVision.Platform содержаться классы реализующие API уровня ядра {dv}.
 |xref:api/DocsVision/Workflow/Workflow_NS.adoc[DocsVision.Workflow] |Пространство имен DocsVision.Workflow реализует доступ к подсистеме управления бизнес-процессами, а также содержит средства организации взаимодействия платформы и различных внешних систем.
