--- a/modules/ROOT/pages/cards/bo-lib/library.adoc
+++ b/modules/ROOT/pages/cards/bo-lib/library.adoc
@@ -1,4 +1,4 @@
-= Библиотека карточек "Базовые объекты"
+= Библиотека карточек "{bo}"
 
 Объектная модель платформы предоставляемая в рамках базовой поставки {dv}, включает коллекцию _сервисов_ и сущностей, которые реализуют объектные модели и _преобразователи данных_ для работы с карточками библиотеки _{bo}_. В данном разделе собрана основная информация, необходимая для работы с карточками данной библиотеки карточек.
 
