--- a/modules/ROOT/pages/cards/general-information.adoc
+++ b/modules/ROOT/pages/cards/general-information.adoc
@@ -105,7 +105,7 @@ CardManager cardManager = userSession.CardManager;
 |Предоставляет методы доступа к системным настройкам.
 
 |xref:api/DocsVision/BackOffice/ObjectModel/Services/ICryptService_IN.adoc[ICryptService]
-|Сервис шифрования файлов карточек приложения _Базовые объекты_
+|Сервис шифрования файлов карточек приложения _{bo}_
 
 .13+|Карточки
 |xref:api/DocsVision/BackOffice/ObjectModel/Services/IDocumentService_IN.adoc[IDocumentService]
@@ -222,7 +222,7 @@ IDocumentService documentService = objectContext.GetService<IDocumentService>();
 +
 [NOTE]
 ====
-В {dv} представлено xref:DM_StandartCards.adoc[большое количество] типов карточек. Если существующие типы недостаточно точно отражают объект целевой системы, может быть разработан xref:develop/cards/scheme/dev-cards-and-lib.adoc[собственный] с уникальной бизнес-логикой.
+В {dv} представлено xref:DM_StandartCards.adoc[большое количество] типов карточек. Если существующие типы недостаточно точно отражают объект целевой системы, может быть разработан xref:solutions/cards/scheme/dev-cards-and-lib.adoc[собственный] с уникальной бизнес-логикой.
 ====
 +
 * _Экземпляр карточки_ -- экземпляр карточки определенного типа. Экземпляр карточки обладает уникальным идентификатором, по которому карточка может быть получена из базы данных. Если следовать аналогии, то экземпляр карточки -- это объект.
