--- a/modules/ROOT/pages/cards/get-card.adoc
+++ b/modules/ROOT/pages/cards/get-card.adoc
@@ -45,7 +45,7 @@ BaseCard card = objectContext.GetObject<BaseCard>(cardId); <.> <.> <.>
 <.> `objectContext` -- проинициализированный _контекст объектов_ (см. xref:cards/connect-to-dv-server.adoc[Подключение к серверу Docsvision]).
 <.> `BaseCard` -- класс объектной модели карточки. Здесь использован базовый класс карточек библиотеки _{bo}_. В любом случае указываемый тип должен быть наследником типа xref:api/DocsVision/Platform/ObjectModel/ObjectBase_CL.adoc[`ObjectBase`] -- базовый класс для всех сущностей данного уровня API.
 +
-Список классов объектных моделей карточек библиотеки _{bo}_ приведен в разделе xref:cards/bo-lib/library.adoc[Библиотека карточек "Базовые объекты"].
+Список классов объектных моделей карточек библиотеки _{bo}_ приведен в разделе xref:cards/bo-lib/library.adoc[Библиотека карточек "{bo}"].
 +
 <.> `cardId` -- идентификатор запрашиваемой карточки.
 
