--- a/modules/ROOT/pages/solutions/cards/develop-solution.adoc
+++ b/modules/ROOT/pages/solutions/cards/develop-solution.adoc
@@ -3,8 +3,8 @@
 В данном разделе приведены практические методики использования API {dv} при разработке готовых решений на базе {dv}. Данные сценарии демонстрируют возможности {dv} для создания законченных программных продуктов, удовлетворяющих потребности конкретной предметной области.
 
 .В этом разделе:
-* xref:develop/cards/scheme/dev-cards-and-lib.adoc[Разработка карточек и библиотек карточек]
-* xref:develop/dm_extension.adoc[Разработка расширений Docsvision]
-* xref:develop/dm_cretatesolution_createcontrol.adoc[Разработка элемента управления для Конструктора разметок]
-* xref:develop/dm_distribution.adoc[Распространение решения]
-* xref:develop/dm_testing.adoc[Отладка и тестирование]
+* xref:solutions/cards/scheme/dev-cards-and-lib.adoc[Разработка карточек и библиотек карточек]
+* xref:solutions/extensions/extensions.adoc[Разработка расширений Docsvision]
+* xref:solutions/control.adoc[Разработка элемента управления для Конструктора разметок]
+* xref:solutions/distribution.adoc[Распространение решения]
+* xref:solutions/testing.adoc[Отладка и тестирование]
