--- a/modules/ROOT/pages/solutions/cards/preapare-card-lib.adoc
+++ b/modules/ROOT/pages/solutions/cards/preapare-card-lib.adoc
@@ -1,12 +1,12 @@
 = Подготовка библиотеки карточек
 
-Библиотека карточек объединяет несколько описаний карточек в одну логическую единицу -- решение. Например, системные карточки объединяются в одну библиотеку, а "базовые объекты" -- в другую. В большинстве случаев одно разрабатываемое решение на платформе {dv} соответствует одной библиотеке.
+Библиотека карточек объединяет несколько описаний карточек в одну логическую единицу -- решение. Например, системные карточки объединяются в одну библиотеку, а "{bo}" -- в другую. В большинстве случаев одно разрабатываемое решение на платформе {dv} соответствует одной библиотеке.
 
 При последующем распространении библиотеки карточек устанавливаются на клиентские компьютеры целиком.
 
 Библиотека отображается в качестве родительской ветки для входящих в неё карточек в дереве карточек в _{wincl}е_ (ветка _Карточки_).
 
-Каждая библиотека карточек имеет описание (схему), собственный программный компонент, иконку и установочный пакет (подробнее о компонентах библиотек -- в разделе xref:develop/cards/CardsDevCompLibary.adoc[Разработка компонента библиотеки карточек]).
+Каждая библиотека карточек имеет описание (схему), собственный программный компонент, иконку и установочный пакет (подробнее о компонентах библиотек -- в разделе xref:solutions/cards/card-component/library.adoc[Разработка компонента библиотеки карточек]).
 
 Схему карточки можно добавить в уже существующую библиотеку, либо в созданную новую.
 
@@ -28,7 +28,7 @@ image::lib-description.png[Описание библиотеки]
 
 [NOTE]
 ====
-Работа с вкладкой _Reports_ описана в разделе xref:use-reports.adoc[Использование отчетов], с вкладкой _Installers_ -- в разделе xref:develop/dm_distribution.adoc["Распространение решения"], а с вкладкой _Log_ -- в разделе xref:event-logs.adoc["Журналирование"].
+Работа с вкладкой _Reports_ описана в разделе xref:use-reports.adoc[Использование отчетов], с вкладкой _Installers_ -- в разделе xref:solutions/distribution.adoc["Распространение решения"], а с вкладкой _Log_ -- в разделе xref:event-logs.adoc["Журналирование"].
 ====
 
 После создания и описания всех свойств библиотеки её название появится в левой панели окна _CardManager_. После чего можно приступать к описанию схем метаданных карточек, входящих в библиотеку.
