--- a/modules/ROOT/pages/solutions/distribution.adoc
+++ b/modules/ROOT/pages/solutions/distribution.adoc
@@ -2,10 +2,9 @@
 
 После завершения разработки решения необходимо позаботиться о его распространении и развертывании на платформе.
 
-Установка готового решения включает в себя два этапа:
-
-* обновление серверной части платформы;
-* инсталляция на клиентские рабочие места.
+.Установка готового решения включает в себя два этапа:
+* Обновление серверной части платформы.
+* Инсталляция на клиентские рабочие места.
 
 [NOTE]
 ====
@@ -13,5 +12,5 @@
 ====
 
 .В данном разделе
-* xref:develop/DM_DistributionServer.adoc[Инсталляция серверной части решения]
-* xref:develop/DM_DistributionClient.adoc[Инсталляция клиентской части решения]
+* xref:solutions/distribution-server.adoc[Инсталляция серверной части решения]
+* xref:solutions/distribution-client.adoc[Инсталляция клиентской части решения]
