--- a/modules/ROOT/pages/SC_AddChildDoc.adoc
+++ b/modules/ROOT/pages/SC_AddChildDoc.adoc
@@ -1,6 +1,6 @@
 = Добавление ссылки на другую карточку к карточке документа
 
-Ниже приведен пример добавления ссылки на карточку библиотеки _Базовые объекты_ в карточку типа Документ:
+Ниже приведен пример добавления ссылки на карточку библиотеки _{bo}_ в карточку типа Документ:
 
 [source,csharp]
 ----
