--- a/modules/ROOT/pages/SC_CreateHistLibBO.adoc
+++ b/modules/ROOT/pages/SC_CreateHistLibBO.adoc
@@ -13,7 +13,7 @@
 
 [NOTE]
 ====
-Данный пример рассчитан на специалиста, знакомого с методикой разработки схемы карточки и библиотеки карточек. Для получения данной информации обратитесь к разделу xref:develop/cards/scheme/dev-data-scheme.adoc[Разработка схемы данных карточки].
+Данный пример рассчитан на специалиста, знакомого с методикой разработки схемы карточки и библиотеки карточек. Для получения данной информации обратитесь к разделу xref:solutions/cards/scheme/dev-data-scheme.adoc[Разработка схемы данных карточки].
 ====
 
 . Создайте новую библиотеку карточек с использованием утилиты _Docsvision CardManager_.
@@ -66,9 +66,9 @@ image::SC_CreateCard8.PNG[image]
 * Description с типом string. Тестовый комментарий к операции перемещения техники.
 +
 image::SC_CreateCard9.PNG[image]
-. Добавить в карточку секции System, Numbers и Processes. Данные секции являются типовыми и могут быть скопированы (операции Copy и Paste из контекстного меню) из схемы карточки типа _Документ_ библиотеки _Базовые объекты_. Если секции создаются методом копирования, необходимо изменить псевдоним секции на начальное значение.
+. Добавить в карточку секции System, Numbers и Processes. Данные секции являются типовыми и могут быть скопированы (операции Copy и Paste из контекстного меню) из схемы карточки типа _Документ_ библиотеки _{bo}_. Если секции создаются методом копирования, необходимо изменить псевдоним секции на начальное значение.
 
-После создания схемы, библиотека карточек должна быть загружена на сервер {dv} (см. раздел xref:develop/cards/scheme/load-scheme.adoc[Загрузка схем карточек в базу данных]).
+После создания схемы, библиотека карточек должна быть загружена на сервер {dv} (см. раздел xref:solutions/cards/scheme/load-scheme.adoc[Загрузка схем карточек в базу данных]).
 
 [IMPORTANT]
 ====
