--- a/modules/ROOT/pages/api/DocsVision/BackOffice/BackOffice_NS.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/BackOffice_NS.adoc
@@ -1,6 +1,6 @@
 = DocsVision.BackOffice -- пространство имен
 
-Пространство имен DocsVision.BackOffice содержит типы представляющие объектную модель библиотеки Базовые объекты.
+Пространство имен DocsVision.BackOffice содержит типы представляющие объектную модель библиотеки {bo}.
 
 == Пространства имен
 
