Опять битая ссылка на изображение

--- a/modules/ROOT/pages/solutions/extensions/winclient.adoc
+++ b/modules/ROOT/pages/solutions/extensions/winclient.adoc
@@ -12,7 +12,7 @@
 Т.к. карточка исполняет лишь функции проводника расширения, то, скорее всего, добавлять в неё рабочие секции и поля не предполагается. Если это так, то добавьте в свою схему фиктивные секцию и поле, чтобы схема карточки считалась корректной.
 
 .Фиктивная секция
-image::fake-section[Фиктивная секция]
+image::fake-section.png[Фиктивная секция]
 
 Компонент карточки-расширения необходимо наследовать от класса xref:api/DocsVision/Platform/WinForms/NavExtension_CL.adoc[`NavExtension`], в котором помимо стандартных интерфейсов компонента карточки реализованы специальные интерфейсы расширения {wincl}а:
 
