Разработка скриптов карточки

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -74,15 +74,15 @@
 **** xref:solutions/distribution-server.adoc[]
 **** xref:solutions/distribution-client.adoc[]
 *** xref:solutions/testing.adoc[]
-** xref:dm_scripts.adoc[]
-*** xref:dm_scripts_getcontrol.adoc[]
-*** xref:dm_cardhost.adoc[]
-**** xref:dm_cardhost_opendictionary.adoc[]
-*** xref:dm_scripts_subscription.adoc[]
-**** xref:dm_scripts_subscription_listlinksfiles.adoc[]
-**** xref:dm_scripts_subscription_documentFiles.adoc[]
-*** xref:dm_scripts_getchildcards.adoc[]
-*** xref:dm_scripts_getribbon.adoc[]
+** xref:scripts/develop-scripts.adoc[]
+*** xref:scripts/get-control.adoc[]
+*** xref:scripts/card-host.adoc[]
+**** xref:scripts/card-host-open-dir.adoc[]
+*** xref:scripts/event-subscription.adoc[]
+**** xref:scripts/links-events.adoc[]
+**** xref:scripts/document-files-events.adoc[]
+*** xref:scripts/dm_scripts_getchildcards.adoc[]
+*** xref:scripts/dm_scripts_getribbon.adoc[]
 *** xref:DebugScripts.adoc[]
 ** xref:dm_wf.adoc[]
 *** xref:WorkflowDevManualBegin.adoc[]
