--- a/modules/ROOT/pages/development.adoc
+++ b/modules/ROOT/pages/development.adoc
@@ -28,6 +28,6 @@
 * xref:delayed-changes.adoc[]
 * xref:event-logs.adoc[]
 * xref:solutions/cards/develop-solution.adoc[]
-* xref:dm_scripts.adoc[]
+* xref:scripts/develop-scripts.adoc[]
 * xref:dm_wf.adoc[]
 * xref:dm_appendix.adoc[]
