Broken image links

--- a/modules/ROOT/pages/appendix/controls/docsvision/CardChooseBox.adoc
+++ b/modules/ROOT/pages/appendix/controls/docsvision/CardChooseBox.adoc
@@ -8,7 +8,7 @@ image::CardChooseBox.png[Элемент управления "CardChooseBox"]
 .`CardChooseBox` содержит следующие функциональные кнопки:
 * *...* -- открывает окно выбора карточки.
 * *X* -- очищает результат выбора карточки.
-* image:magn-glass.png[Увеличительное стекло] -- открывает выбранную карточку.
+* image:buttons/magn-glass.png[Увеличительное стекло] -- открывает выбранную карточку.
 
 В списке задач элемента управления `_CardChooseBox_` можно изменить тип редактора для элемента управления. Тип редактора определяет возможности элемента управления.
 
