--- a/modules/ROOT/pages/appendix/controls/docsvision/CommunicativeChooseBox.adoc
+++ b/modules/ROOT/pages/appendix/controls/docsvision/CommunicativeChooseBox.adoc
@@ -6,7 +6,7 @@
 image::CommunicativeChooseBox.png[Элемент управления "CommunicativeChooseBox"]
 
 .`_CommunicativeChooseBox_` содержит следующие функциональные кнопки:
-* image:status-ico.png[Иконка статуса] -- флаг состояния выбранного сотрудника в Microsoft Lynс Server. Открывает окно отправки сообщения сотруднику.
+* image:buttons/status-ico.png[Иконка статуса] -- флаг состояния выбранного сотрудника в Microsoft Lynс Server. Открывает окно отправки сообщения сотруднику.
 * *...* -- открывает окно выбора сотрудника.
 * *X* -- очищает результат выбора сотрудника.
 
