--- a/modules/ROOT/pages/appendix/controls/docsvision/CommunicativeMultiChooseBox.adoc
+++ b/modules/ROOT/pages/appendix/controls/docsvision/CommunicativeMultiChooseBox.adoc
@@ -7,8 +7,8 @@ image::CommunicativeMultiChooseBox.png[Элемент управления Commu
 
 `_CommunicativeMultiChooseBox_` содержит следующие функциональные кнопки:
 
-* image:phone-state.png[Телефонная трубка] -- флаг состояния выбранного сотрудника в Microsoft Lynс Server. Открывает окно отправки сообщения сотрудникам.
-* image:triangle-down[Треугольник вниз] -- открывает окно выбора сотрудников.
+* image:buttons/phone-state.png[Телефонная трубка] -- флаг состояния выбранного сотрудника в Microsoft Lynс Server. Открывает окно отправки сообщения сотрудникам.
+* image:buttons/triangle-down.png[Треугольник вниз] -- открывает окно выбора сотрудников.
 * *X* -- очищает результат выбора сотрудников.
 
 [NOTE]
