--- a/modules/ROOT/pages/appendix/controls/docsvision/CommunicatorControl.adoc
+++ b/modules/ROOT/pages/appendix/controls/docsvision/CommunicatorControl.adoc
@@ -3,7 +3,7 @@
 Элемент управления `_CommunicatorControl_` отображает статус доступности сотрудника в MS Lync. Является частью элемента управления xref:appendix/controls/docsvision/CommunicativeChooseBox.adoc[`_CommunicativeChooseBox_`], но может быть использован отдельно. Не имеет аналога в _Конструкторе разметок_.
 
 .`_CommunicatorControl_` содержит единственную функциональную кнопку:
-* image:status-ico.png[Иконка статуса] -- флаг состояния выбранного сотрудника в Microsoft Lynс Server. Открывает окно отправки сообщения сотруднику.
+* image:buttons/status-ico.png[Иконка статуса] -- флаг состояния выбранного сотрудника в Microsoft Lynс Server. Открывает окно отправки сообщения сотруднику.
 
 [NOTE]
 ====
